# btc-sign

./: .editorconfig  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
docs/: 01-threat-model.md  02-non-goals.md  03-security-assumptions.md  04-dependencies.md  05-module-layout.md  06-test-plan.md
src/: display.rs  lib.rs  main.rs  output.rs  psbt.rs  sign.rs  wif.rs
tests/: integration.rs
